--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
+    "@mapbox/geo-viewport": "^0.4.0",
+    "@mapbox/geojson-extent": "^0.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@turf/buffer": "^5.1.5",
     "antd": "^4.1.1",
     "apollo-boost": "^0.4.7",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "deck.gl": "^8.1.3",
     "graphql": "^15.0.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
@@ -18,6 +22,7 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-map-gl": "^5.2.5",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
