--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://cluster-admin.kbstrelka.digital"
+  "proxy": "https://cluster.strelka-dc.com",
+  "homepage": "."
 }
